--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="𝗘-𝗙𝗼𝗿𝗺 ">
   <meta property="og:description" content="">
-  <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgZiElyrguV0VQ7Mxngu106p2B8vVJwJFiu6trZk4VcqUMlzaZF1cRI7SDU14dWwLre0PdwUZNh_IGVsGAe67AEceMLqNm_7Kp21H84kF3o5-y45IG5ZjFOE19IaUXXsveI23-dsZIg1c-wDcQDCS0Y9LScWz3RkN2NjLvHjBpC8KCaMj9xTZl5PrnyJAo/s1080/AddText_09-12-08.43.06.jpg">
+  <meta property="og:image" content="https://images-bonnier.imgix.net/files/kom/production/2024/09/14130907/meta-facebookx-Wv19PYOJn0jGZRb-eZFA2w_xx3093.gif?auto=compress,format&w=1500&fit=fill&crop=focalpoint&fp-x=0.5&fp-y=0.5%201500w">
  <link href="https://assets-global.website-files.com/6268b43b417efc37b9578959/627498790a586a0ddf1fb25a_32x32%20logo.png" rel="shortcut icon" type="image/x-icon"/>
 <link href="https://assets-global.website-files.com/6268b43b417efc37b9578959/6274987aace37f3372b3d0f5_256x256%20logo.png" rel="apple-touch-icon"/>
   <link rel="stylesheet" href="./style.css">
